<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="#FF9800"
    android:backgroundTint="#FF9800"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView111"
        android:layout_width="410dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="592dp"
        android:background="@android:color/holo_orange_light" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="139dp"
        android:layout_height="140dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/PokemonPic"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/PokemonName"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:text="@string/NameTV"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/PokemonTotal"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="80dp"
        android:text="@string/totalTV"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="370dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/TrashCan"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/EmptyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/PokemonName"
        android:layout_alignTop="@+id/PokemonName"
        android:layout_marginStart="80dp"
        android:text="@string/EmptyNameTV"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/EmptyTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/PokemonTotal"
        android:layout_alignTop="@+id/PokemonTotal"
        android:layout_marginStart="70dp"
        android:text="@string/EmptyTotalTV"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>